feat(sda-commons-starter-web): update sda-commons-starter-web to spring boot 4
BREAKING CHANGE: update to spring boot 4 and jackson 3